--------
v2.0-git
--------

[jan] Fix link to report faces (Bug #10636).


-----------
v2.0-ALPHA1
-----------

[mjr] Support for sending twitter notifications after uploading images.
[mjr] Refactor Geotagging features to use HordeMap.
[jan] Add Latvian translation (Jānis Eisaks <jancs@dv.lv>).
[jan] Provide default configuration files instead of .dist versions.
[mjr] Mobile view added.
[mjr] Square image and smart square image generators added.
[mjr] Gallery style properties are now directly editable per-gallery by the
      gallery owner (Request #6003).
[mjr] New ajax image uploader added.
[mjr] Categories are removed and migrated to tags.
[mjr] Move tag handling to Content_Tagger.
[mjr] Unsharpmask filtering options added.
[mjr] Support for multipage images (Request #6022).
[mjr] Remove support for no longer available openCV extension.
[mjr] Exif code removed and placed in Horde_Image_Exif.


------
v1.1.2
------

[mjr] Fix issue where subgalleries would become invisible in certain conditions.
[mjr] Fix parsing gps data in certain locales (Bug #9180).
[mjr] Fix a bug that caused certain thumbnail types to be generated as jpeg
      images instead of the requested png type.
[jan] Add French translation (Maxime Chavagne <maxime@chavagne.net>).
[mjr] Enforce the same allowed characters for tags as slugs (Bug #9005).
[mjr] Fix clicking on image edit actions causes logout when not using cookies.
[mjr] Fix adding a face name from the gallery faces view (Bug #9002).


------
v1.1.1
------

[mjr] Fix default value for image_faces value in the database schema
      (Bug #8925).
[mjr] Fix sending ecards when SMTP auth is set, but no global username/password
      exists in the configuration (horde@albasoft@com, Bug #8924).
[mjr] Fix escaping location query for PostgreSQL (Bug #8919).
[mjr] Properly url-encode and escape html when processing tags.
[mjr] Protect against divide-by-zero errors (Bug #8761).
[jan] Fix invalid class name in block for recently geotagged images.
