@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mjr] Fix GROUP BY fields when searching for similar faces (Bug #10635).
 * [jan] Fix link to report faces (Bug #10636).
  </notes>
  <contents>
@@ -1166,6 +1167,7 @@
    <date>2011-10-11</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mjr] Fix GROUP BY fields when searching for similar faces (Bug #10635).
 * [jan] Fix link to report faces (Bug #10636).
    </notes>
   </release>
